# mruby-toy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.lua
gems/mruby-skynet/: README.md  mrbgem.rake
gems/mruby-skynet/mrblib/: skynet.rb
gems/mruby-skynet/mruby-skynet/src/: .skynet.c.swp  skynet.c
gems/mruby-skynet/src/: skynet.c
service-src/: service_toy.c
skynet-src/: malloc_hook.c  skynet_main.c  skynet_server.c  skynet_start.c
src/: test.rb  toy.c
toylib/: loader.rb
